Fix overflowing buttons. Add min and max length validations to endpoints and queries. Clean up bootstrap break points

--- a/app/assets/stylesheets/scaffolds.css
+++ b/app/assets/stylesheets/scaffolds.css
@@ -46,6 +46,11 @@ div {
 
 */
 
+.btn {
+  margin-bottom:4px;
+  white-space: normal;
+}
+
 .dropdown-menu {
   width: 100%;
 }
